Add xor support